Multi-currency transaction reports: each individual should be shown in its own currency, not the one of the main split. Fixed the display of currency for those cases when the currency is different from the base currency. Added test for Transaction by Account report with multiple currencies, contributed by Cristian Onet.

There might be some more fixing to do, as it's one of the most complex
reports.

BUG:297437
BUG:295533
REVIEW:104774